--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PHOTO GALLERY</title>
-    <link rel="stylesheet" href="./syle.css">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="gallery icon" href="./img/icon.png" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
@@ -88,7 +89,7 @@
         </div>
         
         <div class="footer-bottom">
-            <p><b class="text-black">&copy;</b>cohort 8 <a href=”#”>HTTA Fitness Test</a></p>
+            <p><b class="text-black">&copy;</b>cohort 8 <a href="https://food-pictures-gallery.netlify.app/" style="color:rgb(255, 188, 19)">HTTA Fitness Test</a></p>
         </div>
     </footer>
 
