--- a/index.html
+++ b/index.html
@@ -20,60 +20,61 @@
                <!-- topic section end -->
 
             <section class="min-h-screen flex items-center mx-4">
-                <div class="grid grid-cols-4 gap-4">
+                <div class="grid grid-cols-4 gap-4 box">
                     
                     <!-- image start -->
                     <div>
-                        <img src="./img/img-1.jpg" alt="meat burger">
+
+                        <img class="rounded-lg" src="./img/img-1.jpg" alt="meat burger">
                         <p class="imgname" id="image1">Meat Burger</p>
                     </div>
                     <!-- image end -->
                     
                     <!-- image start -->
                     <div>
-                        <img src="./img/img-2.jpg" alt="jellof rice with beef meat">
+                        <img class="rounded-lg" src="./img/img-2.jpg" alt="jellof rice with beef meat">
                         <p class="imgname" id="image2">Jollof Rice with Beef Meat</p>
                     </div>
                     <!-- image end -->
 
                     <!-- image start -->
                     <div>
-                        <img src="./img/img-3.jpg" alt="delicious food composition">
+                        <img class="rounded-lg" src="./img/img-3.jpg" alt="delicious food composition">
                         <p class="imgname" id="image3">Delicious Food Composition</p>
                     </div>
                     <!-- image end -->
 
                     <!-- image start -->
                     <div>
-                        <img src="./img/img-4.jpg" alt="panne pasta">
+                        <img class="rounded-lg" src="./img/img-4.jpg" alt="panne pasta">
                         <p class="imgname" id="image4">Panne Pasta</p>
                     </div>
                     <!-- image end -->
 
                     <!-- image start -->
                     <div>
-                        <img src="./img/img-5.jpg" alt="fried chicken">
+                        <img class="rounded-lg" src="./img/img-5.jpg" alt="fried chicken">
                         <p class="imgname" id="image5">Fried Chicken</p>
                     </div>
                     <!-- image end -->
 
                     <!-- image start -->
                     <div>
-                        <img src="./img/img-6.jpg" alt="baked quails">
+                        <img class="rounded-lg" src="./img/img-6.jpg" alt="baked quails">
                         <p class="imgname" id="image6">Baked Quails</p>
                     </div>
                     <!-- image end -->
 
                     <!-- image start -->
                     <div>
-                        <img src="./img/img-7.jpg" alt="delicious meal assortment">
+                        <img class="rounded-lg" src="./img/img-7.jpg" alt="delicious meal assortment">
                         <p class="imgname" id="image7">Fresh Grill bbq Chicken</p>
                     </div>
                     <!-- image end -->
 
                     <!-- image start -->
                     <div>
-                        <img src="./img/img-8.jpg" alt="baked pastries">
+                        <img class="rounded-lg" src="./img/img-8.jpg" alt="baked pastries">
                         <p class="imgname" id="image8">Baked Pastries</p>
                     </div>
                     <!-- image end -->
